--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 appnope==0.1.2
 argcomplete==1.12.3
 argon2-cffi==21.1.0
+asgiref==3.4.1
 attrs==21.2.0
 backcall==0.2.0
 beautifulsoup4==4.10.0
 bleach==4.1.0
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.7
 debugpy==1.5.1
 decorator==5.1.0
 defusedxml==0.7.1
+Django==3.2.8
 entrypoints==0.3
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
 importlib-metadata==4.8.1
 ipykernel==6.4.2
 ipython==7.28.0
@@ -41,6 +48,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 prometheus-client==0.11.0
 prompt-toolkit==3.0.21
+psycopg2==2.9.1
 ptyprocess==0.7.0
 pycparser==2.20
 Pygments==2.10.0
@@ -51,14 +59,18 @@ pytz==2021.3
 pyzmq==22.3.0
 qtconsole==5.1.1
 QtPy==1.11.2
+requests==2.26.0
 Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.2.1
+SQLAlchemy==1.4.26
+sqlparse==0.4.2
 terminado==0.12.1
 testpath==0.5.0
 tornado==6.1
 traitlets==5.1.1
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
