--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.1
 pip-autoremove==0.10.0
-psycopg2==2.9.1
+psycopg2-binary==2.9.1
 pytz==2021.3
 requests==2.26.0
 soupsieve==2.2.1
